tests/reference/asr_preprocess-unterminated_if_01-6989548.stderr
C preprocessor error: Unterminated #if
 --> tests/errors/unterminated_if_01.f90:9:1
  |
9 | 
  | ^ 
